--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 <body style="background-color:lightgray">
     <div class="container">
-        <div class="card container" style="margin-top: 50px; border-color:darkgray; border-radius: 10px; border-width: 3px;">
+        <div class="card container" style="margin-top: 50px; border-color:darkgray; border-radius: 10px; border-width: 3px; min-height: 650px;">
             <app-root></app-root>
         </div>
     </div>
